hphp/hack/test/typecheck/function_pointer/class_meth_abstract_trait.php.exp
File "class_meth_abstract_trait.php", line 8, characters 3-31:
Cannot create a class_meth of Foo::bar; it is abstract. (Typing[4382])
  File "class_meth_abstract_trait.php", line 4, characters 35-37:
  Declaration is here
File "class_meth_abstract_trait.php", line 10, characters 3-26:
Cannot create a class_meth of Foo::bar; it is abstract. (Typing[4382])
  File "class_meth_abstract_trait.php", line 4, characters 35-37:
  Declaration is here
File "class_meth_abstract_trait.php", line 12, characters 8-10:
Cannot create a function pointer to `Foo::bar`; it is abstract (Typing[4391])
  File "class_meth_abstract_trait.php", line 4, characters 35-37:
  Declaration is here
