hphp/hack/test/typecheck/function_pointer/class_meth_abstract_trait.php
<?hh

trait Foo {
  public abstract static function bar(): void;
}

function test(): void {
  class_meth(Foo::class, 'bar');

  class_meth('Foo', 'bar');

  Foo::bar<>;
}
